# wf4bwdf

./: .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml
data/: InflowData.xlsx  WeatherData.xlsx
src/wf4bwdf/: __init__.py  _data_loading.py  _solution_evaluation.py
submissions/bwdf-competitors/: TeamSolutions.xlsx
tests/: main.py  test_input_data_upload.py  test_readme.py
