[project]
name = "wf4bwdf"
version = "0.1.0"
description = "Water-Futures Team implementation of the Battle of the Water Demand Forecasting"
readme = "README.md"
authors = [
    { name = "Dennis Zanutto", email = "dennis.zanutto@polimi.it" }
]
requires-python = ">=3.11"
dependencies = [
    "pandas>2.1.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
